--- a/app/requirements/base.in
+++ b/app/requirements/base.in
@@ -1,5 +1,7 @@
+alembic==1.7.6
 azure-identity==1.7.1
 fastapi==0.74.1
+httpx==0.22.0
 uvicorn[standard]==0.17.5
 pydantic==1.9.0
 SQLAlchemy==1.4.31
