--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     command: uvicorn --host=0.0.0.0 --port 8000 app.main:app --reload
     build:
       context: .
-      dockerfile: docker/Dockerfile
+      dockerfile: docker/Dockerfile.api
       args:
         REQUIREMENTS: ${REQUIREMENTS:-dev}
     ports:
