--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,11 @@ on:
   push:
     branches: []
     tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: []
 
 env:
   REGISTRY: ghcr.io
   SA_PW: MSSQLpassword1
+  TEST_IMAGE_NAME: ${REGISTRY}/$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')/finkybotz-tests
 
 jobs:
   test:
@@ -18,30 +17,43 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.0
-#      - name: Log in to GitHub Packages
-#        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ${REGISTRY} -u ${{ github.actor }} --password-stdin
-#      - name: Pull image
-#        run: |
-#          docker pull ${{ env.TEST_IMAGE_NAME }} || true
+
+      - name: Log in to GitHub Packages
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ${REGISTRY} -u ${{ github.actor }} --password-stdin
+
       - name: Install SQL Server
         shell: bash
         run: |
           docker run -e "ACCEPT_EULA=Y" -e "SA_PASSWORD=${{ env.SA_PW }}" -e "MSSQL_PID=Developer" -e "MSSQL_COLLATION=Polish_CI_AI" -p 1433:1433 --name sqlserver -d mcr.microsoft.com/mssql/server:2019-latest
+
       - name: Check docker
         shell: bash
         run: |
           docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' sqlserver
-      - name: Build container
+
+      - name: Pull test image
+        run: |
+          docker pull ${{ env.TEST_IMAGE_NAME }}:latest || true
+
+      - name: Build test image
         run: |
           docker build \
+          --cached-from ${{ env.TEST_IMAGE_NAME }}:latest \
+          -t ${{ env.TEST_IMAGE_NAME }}:latest \
           -f docker/Dockerfile.tests \
-          -t finkybotz-tests \
           "."
+
+      - name: Push test image
+        run: |
+          docker push ${{ env.TEST_IMAGE_NAME }}:latest
+
       - name: Setup SQL Server
         run: docker exec sqlserver bash -c "/opt/mssql-tools/bin/sqlcmd -S 127.0.0.1,1433 -U sa -P ${{ env.SA_PW }} -Q 'CREATE DATABASE test_database COLLATE Polish_CI_AI'"
+
       - name: Run tests
         run: |
           docker run \
+          -d \
           --name finkybotz-tests \
           --env-file=.env.test.docker \
           finkybotz-tests \
