--- a/docker/Dockerfile.tests
+++ b/docker/Dockerfile.tests
@@ -1,5 +1,7 @@
 FROM python:3.10-slim-buster
 
+LABEL org.opencontainers.image.source = "https://github.com/adamkielar/finkybotz-be"
+
 WORKDIR /src
 
 ENV PYTHONUNBUFFERED=1 PIP_NO_CACHE_DIR=1 PIP_DISABLE_PIP_VERSION_CHECK=1
