--- a/.env.test.docker
+++ b/.env.test.docker
@@ -1,4 +1,4 @@
-SA_PASSWORD=MSSQLpassword1
+SA_PASSWORD="MSSQLpassword1"
 ACCEPT_EULA="Y"
 Database=master
 Mssql_Server=mssql
@@ -6,6 +6,5 @@ ProjectName=FinkyBotz
 SQLAlchemyConnectionPoolLimit=10
 SQLAlchemyConnectionPoolOverflow=20
 SQLAlchemyConnectionTimeout=5
-Environment=dev
-Database_Dev_Url=mssql+pyodbc://sa:MSSQLpassword1@mssql:1433/finky?driver=ODBC+Driver+17+for+SQL+Server
-Database_Test_Url=mssql+pyodbc://sa:MSSQLpassword1@localhost:1433/master?driver=ODBC+Driver+17+for+SQL+Server
+Environment=tst
+Database_Test_Url=mssql+pyodbc://sa:MSSQLpassword1@172.17.0.2:1433/master?driver=ODBC+Driver+17+for+SQL+Server
