--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,11 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   TEST_IMAGE_NAME: ghcr.io/adamkielar/finkybotz-be/finkybotz-tests::latest
+  SA_PW: MSSQLpassword1
 
 jobs:
   test:
-    name: Build Docker Image
+    name: Run tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -24,20 +25,26 @@ jobs:
 #      - name: Pull image
 #        run: |
 #          docker pull ${{ env.TEST_IMAGE_NAME }} || true
+      - name: Install SQL Server
+        shell: bash
+        run: |
+          docker run -e "ACCEPT_EULA=Y" -e "SA_PASSWORD=MSSQLpassword1" -e "MSSQL_PID=Developer" -e "MSSQL_COLLATION=Polish_CI_AI" -p 1433:1433 --name sqlserver -d mcr.microsoft.com/mssql/server:2019-latest
+      - name: Check docker
+        shell: bash
+        run: |
+          docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' sqlserver
       - name: Build container
         run: |
           docker build \
           -f docker/Dockerfile.tests \
           -t finkybotz-tests \
           "."
+      - name: Setup SQL Server
+        run: docker exec sqlserver bash -c "/opt/mssql-tools/bin/sqlcmd -S 127.0.0.1,1433 -U sa -P MSSQLpassword1 -Q 'CREATE DATABASE test_database COLLATE Polish_CI_AI'"
       - name: Run Container
         run: |
           docker run \
-          -d \
           --name finkybotz-tests \
           --env-file=.env.test.docker \
-          finkybotz-tests
-      - name: Load env
-        run: docker exec finkybotz-tests ./load_env.sh .env.test.docker
-      - name: Pytest
-        run: docker exec finkybotz-tests python -m pytest -v -s
+          finkybotz-tests \
+          bash -c pytest -v -s
