--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,13 @@
-name: Build and test on develop
+name: Build and test
 
 on:
   push:
     branches: []
-    tags: [ 'v*.*.*' ]
 
 env:
   REGISTRY: ghcr.io
   SA_PW: MSSQLpassword1
-  TEST_IMAGE_NAME: ${REGISTRY}/$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')/finkybotz-tests
+  TEST_IMAGE_NAME: ghcr.io/adamkielar/finkybotz-be/finkybotz-tests
 
 jobs:
   test:
@@ -26,16 +25,11 @@ jobs:
         run: |
           docker run -e "ACCEPT_EULA=Y" -e "SA_PASSWORD=${{ env.SA_PW }}" -e "MSSQL_PID=Developer" -e "MSSQL_COLLATION=Polish_CI_AI" -p 1433:1433 --name sqlserver -d mcr.microsoft.com/mssql/server:2019-latest
 
-      - name: Check docker
-        shell: bash
-        run: |
-          docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' sqlserver
-
-      - name: Pull test image
+      - name: Pull Test Image
         run: |
           docker pull ${{ env.TEST_IMAGE_NAME }}:latest || true
 
-      - name: Build test image
+      - name: Build Test Image
         run: |
           docker build \
           --cache-from ${{ env.TEST_IMAGE_NAME }}:latest \
@@ -43,18 +37,46 @@ jobs:
           -f docker/Dockerfile.tests \
           "."
 
-      - name: Push test image
-        run: |
-          docker push ${{ env.TEST_IMAGE_NAME }}:latest
-
       - name: Setup SQL Server
         run: docker exec sqlserver bash -c "/opt/mssql-tools/bin/sqlcmd -S 127.0.0.1,1433 -U sa -P ${{ env.SA_PW }} -Q 'CREATE DATABASE test_database COLLATE Polish_CI_AI'"
 
-      - name: Run tests
+      - name: Run Container
         run: |
           docker run \
           -d \
           --name finkybotz-tests \
           --env-file=.env.test.docker \
-          finkybotz-tests \
-          bash -c pytest -v -s
+          ${{ env.TEST_IMAGE_NAME }}:latest
+
+      - name: Run Pytest
+        run: |
+          docker exec finkybotz-tests pytest -vv -s --junitxml pytest.xml > pytest.xml 2>&1
+
+      - name: Upload Unit Test Results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: Unit Test Results
+          path: pytest.xml
+
+      - name: Run bandit
+        run: |
+          docker exec finkybotz-tests bandit -r .
+
+      - name: Run safety
+        run: |
+          docker exec finkybotz-tests safety check -i 42194
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: '${{ env.TEST_IMAGE_NAME }}:latest'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+
+      - name: Push test image
+        run: |
+          docker push ${{ env.TEST_IMAGE_NAME }}:latest
