--- a/app/requirements/dev.in
+++ b/app/requirements/dev.in
@@ -1,11 +1,13 @@
 -r base.in
 
 black==22.1.0
+bandit==1.7.4
 pytest==7.0.1
 pytest-asyncio==0.18.1
 pytest-cov==3.0.0
 pytest-xdist==2.5.0
 pdbpp==0.10.2
+safety==1.10.3
 nest-asyncio==1.5.4
 aresponses==2.1.5
 mock==4.0.3
