--- a/docker/Dockerfile.tests
+++ b/docker/Dockerfile.tests
@@ -1,18 +1,22 @@
 FROM python:3.10-slim-buster
 
+LABEL org.opencontainers.image.source = "https://github.com/adamkielar/finkybotz-be"
+
 WORKDIR /src
 
-ENV PYTHONUNBUFFERED=1 PIP_NO_CACHE_DIR=1 PIP_DISABLE_PIP_VERSION_CHECK=1
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
 
 RUN apt-get -y update --allow-releaseinfo-change && apt-get install curl gnupg -y && \
     curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
     curl https://packages.microsoft.com/config/debian/10/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
-    apt-get -y update --allow-releaseinfo-change && ACCEPT_EULA=Y apt-get install gcc libpq-dev build-essential libssl-dev uuid-dev cmake libcurl4-openssl-dev pkg-config python3-dev python3-pip msodbcsql17 mssql-tools unixodbc unixodbc-dev -y
+    apt-get -y update --allow-releaseinfo-change && ACCEPT_EULA=Y apt-get install gcc libpq-dev build-essential libssl-dev uuid-dev cmake libcurl4-openssl-dev pkg-config python3-dev python3-pip msodbcsql17 mssql-tools unixodbc unixodbc-dev -y && \
+    apt-get clean
 
 COPY app/requirements/dev.txt /src/dev_app.txt
 
-RUN pip install --no-cache-dir --upgrade -r /src/dev_app.txt
+RUN pip install --upgrade -r /src/dev_app.txt
 
 COPY . /src
 
-CMD pytest tests -s
+CMD uvicorn app.main:app --proxy-headers --host 0.0.0.0 --port 8000
